include colab link

--- a/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
+++ b/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Mkhan13/ai_cybersecurity/blob/Assignment-1/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "RWfMCcHfiYqG"
       },
       "source": [
@@ -31,13 +41,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hC57sdb9iYqI",
-        "outputId": "c3645298-13c7-4b5f-81df-ae496c059b5a"
+        "outputId": "e25b28e3-42e3-4a3a-e5e5-b07546ed3340"
       },
       "outputs": [
         {
@@ -58,7 +68,7 @@
         "# Import Machine Learning tools\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn import datasets\n",
         "from sklearn.svm import SVC\n",
@@ -82,14 +92,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 223
         },
         "id": "tEbSXXRDiYqI",
-        "outputId": "da9df5c8-6b08-46ca-819d-3e199be9ea54"
+        "outputId": "0df8f3c7-370e-4923-f59a-62e5fcd124bb"
       },
       "outputs": [
         {
@@ -112,7 +122,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-20e1d765-8e4c-4c0b-acfb-f3ec4018f8e6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-be4e4376-9679-49fa-9959-6877121a40b1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -167,7 +177,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-20e1d765-8e4c-4c0b-acfb-f3ec4018f8e6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-be4e4376-9679-49fa-9959-6877121a40b1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -219,12 +229,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-20e1d765-8e4c-4c0b-acfb-f3ec4018f8e6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-be4e4376-9679-49fa-9959-6877121a40b1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-20e1d765-8e4c-4c0b-acfb-f3ec4018f8e6');\n",
+              "        const element = document.querySelector('#df-be4e4376-9679-49fa-9959-6877121a40b1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -254,7 +264,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ],
       "source": [
@@ -290,13 +300,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AOsXdn2ViYqJ",
-        "outputId": "a987e839-d14c-4826-f298-327dc98997ff"
+        "outputId": "b3c432bb-735b-42c3-fc0c-9a47c43818ae"
       },
       "outputs": [
         {
@@ -310,7 +320,7 @@
       "source": [
         "# 1. Create the model\n",
         "# You can change n_neighbors to see what happens\n",
-        "model = KNeighborsClassifier(n_neighbors=5)\n",
+        "model = KNeighborsClassifier(n_neighbors=7)\n",
         "\n",
         "# 2. Train the model (The \"Learning\" part)\n",
         "model.fit(X_train_w, y_train_w)\n",
@@ -349,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_mCWN1PmnfV1",
-        "outputId": "3bc51280-c312-42dc-d85c-c742b8f4aafb"
+        "outputId": "a234d73b-1566-4242-ac25-d2b2d741b2b3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,13 +374,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rTKj_7YDiYqJ",
-        "outputId": "5fb79960-d45e-41c8-b60d-e310196d3879"
+        "outputId": "b1040a37-fb40-413a-c498-691ad92bb28e"
       },
       "outputs": [
         {
@@ -384,7 +394,7 @@
       "source": [
         "# Update this string to match your filename!\n",
         "\n",
-        "path = ## Your Path Here##\n",
+        "path = \"drive/MyDrive/Cybersec/Friday-WorkingHours-Afternoon-DDos.pcap_ISCX.csv\"\n",
         "#note - if you upload to google drive it may read something like this:\n",
         "#path = \"drive/My Drive/CYBERSEC520/MachineLearningCVE/Friday-WorkingHours-Afternoon-DDos.pcap_ISCX.csv\"\n",
         "\n",
@@ -409,13 +419,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_kyLYEYXiYqJ",
-        "outputId": "f87d3d1a-a7aa-4b3f-ad13-b6c43a6c3c8c"
+        "outputId": "9cc65584-72a8-4bc5-b1ab-55da70e945a6"
       },
       "outputs": [
         {
@@ -452,13 +462,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "STXSEp3OiYqJ",
-        "outputId": "14bd3585-6e52-438f-c9e2-7b6bbe89d142"
+        "outputId": "e40203c5-c1ea-495a-b936-a59b91320101"
       },
       "outputs": [
         {
@@ -527,20 +537,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xOQIbbdHiYqJ",
-        "outputId": "99f28ca1-5bd2-400b-dbb5-0b4d1312a69e"
+        "outputId": "e2ef39a6-5bbe-4a3d-fe83-dde187473751"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Baseline Accuracy: 0.9600\n"
+            "Baseline Accuracy: 0.9600\n",
+            "Baseline F1_score: 0.9599\n"
           ]
         }
       ],
@@ -549,7 +560,7 @@
         "\n",
         "# 1. Initialize the model (Use default settings, leave the parentheses empty)\n",
         "# Hint: clf = KNeighborsClassifier() or clf = SVC()\n",
-        "clf_baseline = SVC()   ### YOUR CODE HERE ###\n",
+        "clf_baseline = KNeighborsClassifier()   ### YOUR CODE HERE ###\n",
         "\n",
         "\n",
         "# 2. Fit the model on X_train and y_train\n",
@@ -562,7 +573,9 @@
         "\n",
         "# Calculate Accuracy\n",
         "baseline_acc = accuracy_score(y_test, y_pred_base)\n",
-        "print(f\"Baseline Accuracy: {baseline_acc:.4f}\")"
+        "baseline_f1 = f1_score(y_test, y_pred_base, average='weighted')\n",
+        "print(f\"Baseline Accuracy: {baseline_acc:.4f}\")\n",
+        "print(f\"Baseline F1_score: {baseline_f1:.4f}\")"
       ]
     },
     {
@@ -588,20 +601,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MLqP_yuyiYqJ",
-        "outputId": "49e1b861-cf48-4b9c-89c2-464003098943"
+        "outputId": "006fc018-bf42-41f9-e1fc-6e24d2632a89"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Experiment Accuracy: 0.9650\n",
+            "Experiment Accuracy: 0.9700\n",
+            "Experiment F1_score: 0.9699\n",
             "🎉 Success! You improved the model!\n"
           ]
         }
@@ -618,7 +632,7 @@
         "    # Note: gamma is only used for 'rbf', 'poly', and 'sigmoid' kernels.\n",
         "    # Example: clf_experiment = SVC(C=1.0, kernel='rbf', gamma=0.1)\n",
         "\n",
-        "clf_experiment = ### YOUR CODE HERE ###\n",
+        "clf_experiment = KNeighborsClassifier(n_neighbors=3, weights='distance')\n",
         "\n",
         "# Train\n",
         "clf_experiment.fit(X_train, y_train)\n",
@@ -628,7 +642,9 @@
         "\n",
         "# Score\n",
         "exp_acc = accuracy_score(y_test, y_pred_exp)\n",
+        "exp_f1 = f1_score(y_test, y_pred_exp, average='weighted')\n",
         "print(f\"Experiment Accuracy: {exp_acc:.4f}\")\n",
+        "print(f\"Experiment F1_score: {exp_f1:.4f}\")\n",
         "\n",
         "# Compare\n",
         "if exp_acc > baseline_acc:\n",
@@ -647,32 +663,36 @@
         "*Double click this cell to edit it and answer the questions.*\n",
         "\n",
         "**1. What model and dataset did you choose?**\n",
-        "* Dataset: [e.g., CICIDS2017 DDoS]\n",
-        "* Model: [e.g., k-Nearest Neighbors]\n",
+        "* Dataset: Friday-WorkingHours-Afternoon-DDos\n",
+        "* Model: k-Nearest Neighbors\n",
         "\n",
         "**2. What was your baseline performance?**\n",
-        "* Accuracy: [Enter number here]\n",
-        "* F1_score: [Enter number here]\n",
+        "* Accuracy: 0.9600\n",
+        "* F1_score: 0.9599\n",
         "\n",
         "**3. What hyperparameter(s) did you change?**\n",
         "* [e.g I tried the following combinations of hyperameters]\n",
-        " |Trial | hyperparameter 1 |hyperparameter 2|...|F1_score|\n",
-        " |---|--- | ---| ---|---|\n",
-        " |Baseline |default| default|...| performance|\n",
-        " |Trial 1 |10 | default|...| performance|\n",
-        " |...||\n",
-        " |...||\n",
-        " |Trial n|\n",
-        "\n",
+        " |Trial | n_neighbors |weights |Accuracy| F1 Score|\n",
+        " |---|--- | ---|---|---|\n",
+        " |Baseline |default| default| 0.9600|0.9599|\n",
+        " |Trial 1 | 1 | uniform| 0.9675|0.9674|\n",
+        " |Trial 2 | 3 | uniform| 0.9700|0.9699|\n",
+        " |Trial 3 | 11| uniform| 0.9575|0.9573|\n",
+        " |Trial 4 | 1 |distance| 0.9675|0.9674|\n",
+        " |Trial 5 | 3 |distance| 0.9700|0.9699|\n",
+        " |Trial 6 | 11|distance| 0.9650|0.9649|\n",
         "\n",
         "**4. What setting worked the best?**\n",
-        "* The best setting was:\n",
+        "* The best setting was:  \n",
+        "n_neighbors = 3  \n",
+        "weights = distance or uniform\n",
         "\n",
         "**5. Hypothesize why you think that is.**\n",
-        "* [Write 1-2 sentences. e.g., \"I think a higher K worked better because ...\"]\n",
+        "* I beleive k=3 worked the best because it is able to balance the sensitivity to patterns and detect variation in the data without too much noise. Both distance or uniform weights performed similarly because the nearest neighbors were likely already very close so giving more weight to closer points did not change or improve the predictions.\n",
         "\n",
         "**6. What issues did you run into? Were you able to solve them?**\n",
-        "* [e.g., My model threw an error when running F1_score, so I had to explicitly map the positive label to `DDoS`.]"
+        "* When calculating the F1 score, I got an error with the default code. I had to explicitly specify to use the weighted average to resolve the issue.\n",
+        "* I also ran into issues mounting the csv file to be used by the notebook. I ultimately uploaded the file directly to my google drive and connected it from there."
       ]
     },
     {
@@ -682,10 +702,10 @@
       },
       "source": [
         "## Submission Checklist\n",
-        "* [ ] Did you include your name?\n",
-        "* [ ] Did you list your teammates (if any)?\n",
-        "* [ ] Did you run all cells?\n",
-        "* [ ] Did you answer the reflection questions in Step 5?\n",
+        "* [x] Did you include your name?\n",
+        "* [x] Did you list your teammates (if any)?\n",
+        "* [x] Did you run all cells?\n",
+        "* [x] Did you answer the reflection questions in Step 5?\n",
         "\n",
         "**To Submit:** File -> Download -> Download .ipynb"
       ]
@@ -710,7 +730,8 @@
       "version": "3.8.5"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
