--- a/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
+++ b/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
@@ -671,16 +671,15 @@
         "* F1_score: 0.9599\n",
         "\n",
         "**3. What hyperparameter(s) did you change?**\n",
-        "* [e.g I tried the following combinations of hyperameters]\n",
-        " |Trial | n_neighbors |weights |Accuracy| F1 Score|\n",
-        " |---|--- | ---|---|---|\n",
-        " |Baseline |default| default| 0.9600|0.9599|\n",
-        " |Trial 1 | 1 | uniform| 0.9675|0.9674|\n",
-        " |Trial 2 | 3 | uniform| 0.9700|0.9699|\n",
-        " |Trial 3 | 11| uniform| 0.9575|0.9573|\n",
-        " |Trial 4 | 1 |distance| 0.9675|0.9674|\n",
-        " |Trial 5 | 3 |distance| 0.9700|0.9699|\n",
-        " |Trial 6 | 11|distance| 0.9650|0.9649|\n",
+        " |Trial | n_neighbors |weights |Accuracy| F1 Score|  \n",
+        " |---|--- | ---|---|---|  \n",
+        " |Baseline |default| default| 0.9600|0.9599|  \n",
+        " |Trial 1 | 1 | uniform| 0.9675|0.9674|  \n",
+        " |Trial 2 | 3 | uniform| 0.9700|0.9699|  \n",
+        " |Trial 3 | 11| uniform| 0.9575|0.9573|  \n",
+        " |Trial 4 | 1 |distance| 0.9675|0.9674|  \n",
+        " |Trial 5 | 3 |distance| 0.9700|0.9699|  \n",
+        " |Trial 6 | 11|distance| 0.9650|0.9649|  \n",
         "\n",
         "**4. What setting worked the best?**\n",
         "* The best setting was:  \n",
@@ -688,7 +687,7 @@
         "weights = distance or uniform\n",
         "\n",
         "**5. Hypothesize why you think that is.**\n",
-        "* I beleive k=3 worked the best because it is able to balance the sensitivity to patterns and detect variation in the data without too much noise. Both distance or uniform weights performed similarly because the nearest neighbors were likely already very close so giving more weight to closer points did not change or improve the predictions.\n",
+        "* I believe k=3 worked the best because it is able to balance the sensitivity to patterns and detect variation in the data without too much noise. Both distance or uniform weights performed similarly because the nearest neighbors were likely already very close so giving more weight to closer points did not change or improve the predictions.\n",
         "\n",
         "**6. What issues did you run into? Were you able to solve them?**\n",
         "* When calculating the F1 score, I got an error with the default code. I had to explicitly specify to use the weighted average to resolve the issue.\n",
