--- a/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
+++ b/CYBERSEC_Assignment_1_Colab_and_ML_basics.ipynb
@@ -560,14 +560,14 @@
         "\n",
         "# 1. Initialize the model (Use default settings, leave the parentheses empty)\n",
         "# Hint: clf = KNeighborsClassifier() or clf = SVC()\n",
-        "clf_baseline = KNeighborsClassifier()   ### YOUR CODE HERE ###\n",
+        "clf_baseline = KNeighborsClassifier()\n",
         "\n",
         "\n",
         "# 2. Fit the model on X_train and y_train\n",
-        "clf_baseline.fit(X_train, y_train)      ### YOUR CODE HERE ###\n",
+        "clf_baseline.fit(X_train, y_train)\n",
         "\n",
         "# 3. Predict on X_test\n",
-        "y_pred_base = clf_baseline.predict(X_test) ### YOUR CODE HERE ###\n",
+        "y_pred_base = clf_baseline.predict(X_test)\n",
         "\n",
         "# --- END STUDENT AREA ---\n",
         "\n",
@@ -660,7 +660,6 @@
       },
       "source": [
         "## Step 5: Documentation & Reflection 📝\n",
-        "*Double click this cell to edit it and answer the questions.*\n",
         "\n",
         "**1. What model and dataset did you choose?**\n",
         "* Dataset: Friday-WorkingHours-Afternoon-DDos\n",
