--- a/Cybersec_Lab_2.ipynb
+++ b/Cybersec_Lab_2.ipynb
@@ -491,7 +491,7 @@
         "id": "optimal_clusters",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 744
+          "height": 637
         },
         "outputId": "7350b096-76fe-4e20-9b5c-e6b01ce51767"
       },
@@ -880,11 +880,11 @@
         "| GMM | k = 6 | 0.659 |\n",
         "| DBSCAN | eps = 0.5, min_samples = 5 | N/A |\n",
         "\n",
-        "**Key Insight**: Different clustering methods perform better depending on data clustering and noise\n",
+        "**Key Insight**: Different clustering methods perform better depending on data clustering and noise. For this dataset it was GMM which had k=6 and a silhouette score of 0.636.\n",
         "\n",
-        "**Biggest Challenge**: Handeling anomolies and noise\n",
+        "**Biggest Challenge**: Handeling anomolies and noise in the data.\n",
         "\n",
-        "**Most Surprising Finding**: GMM was better than K-Means for this dataset\n",
+        "**Most Surprising Finding**: GMM was better than K-Means for this dataset. Usually K-Means tends to perform more consistently so this result was surprising.\n",
         "\n",
         "**Brief Summary - When to use each algorithm in cybersecurity contexts**:\n",
         "K-Means is best used for real-time detection, like in SOC environments. GMM is best used for when more detailed and complex analysis is needed, like for threat hunting. DBSCAN is best used to detect unknown attacks and outliers in a system.\n",
